# AI-Data-Control-Plane

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
ci/: README.md  github-actions-ci.yml
controlplane/: __init__.py  config.py  demo.py  events.py  ingest_utils.py  models.py  relay.py  runner.py  schemas.py
controlplane/embeddings/: __init__.py  embedder.py
controlplane/enrichment/: enricher.py
controlplane/promotion/: __init__.py  engine.py
controlplane/quality/: __init__.py  gates.py
controlplane/stores/: __init__.py  object_store.py  registry.py  vector_store.py
controlplane/validation/: __init__.py  validator.py
docs/: DEMO.md  INTERVIEW.md  architecture.md
flows/_system/: event-relay.yaml  sync-namespace-files.yaml
flows/governance/: emergency-rollback.yaml  quality-audit.yaml
flows/ingestion/: dataset-pipeline.yaml
flows/pipelines/: scheduled-rebuild.yaml
monitoring/grafana/dashboards/: controlplane-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
plugin/: .gitignore  README.md  build.gradle  settings.gradle
plugin/src/main/java/io/controlplane/kestra/plugin/: PromotionGate.java  package-info.java
plugin/src/test/java/io/controlplane/kestra/plugin/: PromotionGateTest.java
sample_data/: documents.json  products_bad.json  products_good.json  webhook_documents.json
scripts/: e2e_local.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: main.py  security.py
services/gateway/app/routers/: console.py  demo.py  ingest.py  observability.py  registry.py  search.py
services/gateway/app/static/: console.css  console.html  console.js
services/runner/: Dockerfile
sql/: init.sql
tests/: conftest.py  test_enrichment_embeddings.py  test_events.py  test_events_dispatch.py  test_flows_yaml.py  test_gateway_api.py  test_gateway_security.py  test_ingest_utils.py  test_models.py  test_promotion.py  test_promotion_rollback.py  test_quality_gates.py  test_relay.py  test_validation.py
