[project]
name = "ai-data-control-plane"
version = "1.0.0"
description = "Event-driven orchestration platform for AI & data pipelines: validation, enrichment, embeddings, quality gates, blue/green promotion, observability."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "redis>=5.0",
    "minio>=7.2",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "fakeredis>=2.23",
    "pyyaml>=6.0",
    "ruff>=0.5",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "uvicorn>=0.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["controlplane*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
source = ["controlplane"]
